add favicon link

--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -16,6 +16,9 @@
       rel="stylesheet"
     />
 
+    {{-- Favicon --}}
+    <link rel="icon" href="/favicon.ico" />
+
     @stack('dumper')
     @viteReactRefresh()
     @inertiaHead()
