--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -19,6 +19,11 @@
     {{-- Favicon --}}
     <link rel="icon" href="/favicon.ico" />
 
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js">
+      
+    </script>
+
     @stack('dumper')
     @viteReactRefresh()
     @inertiaHead()
