add legal pages

--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -29,7 +29,7 @@
     @inertiaHead()
     @vite(['inertia/app/app.tsx', `inertia/pages/${page.component}.tsx`])
   </head>
-  <body class="min-h-screen w-screen font-sans">
+  <body class="min-h-screen w-screen font-sans overflow-x-hidden">
     @inertia()
   </body>
 </html>
